<resources>
    <string name="app_name">Auto-Home</string>
    <string name="action_switch">Switch Mode</string>
    <string name="action_rescan">Rescan</string>
    <string name="title_activity_remote">Remote Mode</string>
    <string name="title_activity_receiver">Receiver Mode</string>
    <string name="title_activity_connected_remote">ConnectedRemoteActivity</string>

    <!--RemoteActivity Strings-->
    <string name="lockButtonUnlocked">Lock</string>
    <string name="lockButtonLocked">Unlock</string>
    <string name="lightsButtonOn">Turn Off</string>
    <string name="lightsButtonOff">Turn On</string>
    <string name="lockUnlocked">Unlocked</string>
    <string name="lockLocked">Locked</string>
    <string name="lightsOn">On</string>
    <string name="lightsOff">Off</string>
    <string name="lockDescriptor">Lock Module: </string>
    <string name="lightsDescriptor">Lights Module: </string>
    <string name="noRegion">No Current Region</string>
    <string name="iceRegion">Current Region: Door</string>
    <string name="nullRegion">Estimote Disabled</string>
    <string name="estimoteOn">Activate Estimote</string>
    <string name="estimoteOff">Deactivate Estimote</string>

    <!--Taken from Bluetooth LE Device Official Android Sample-->
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="mldp_not_supported">MLDP is not supported</string>

    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_refresh">Refresh</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

</resources>
