<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity$PlaceholderFragment"
    android:gravity="center_vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/abc_text_size_large_material"
            android:id="@+id/lock_text"
            android:text="@string/lockDescriptor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lockStatus"
            android:text="@string/lockUnlocked"
            android:textSize="@dimen/abc_text_size_large_material"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lock_button"
            android:text="@string/lockButtonLocked"
            android:onClick="sendUnlockMessage"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/unlock_button"
            android:text="@string/lockButtonUnlocked"
            android:onClick="sendLockMessage"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/abc_text_size_large_material"
            android:id="@+id/lights_text"
            android:text="@string/lightsDescriptor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lightsStatus"
            android:text="@string/lightsOff"
            android:textSize="@dimen/abc_text_size_large_material"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lights_off_button"
            android:text="@string/lightsButtonOff"
            android:onClick="sendLightsOnMessage" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lights_on_button"
            android:text="@string/lightsButtonOn"
            android:onClick="sendLightsOffMessage" />

    </LinearLayout>

    <View
        android:id="@+id/separator2"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:visibility="visible" />

    <TextView
        android:id="@+id/region_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/noRegion"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:paddingTop="@dimen/abc_action_bar_subtitle_bottom_margin_material" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/stop_estimote"
        android:text="Deactivate Estimote"
        android:onClick="toggleEstimote"
        android:layout_gravity="center_horizontal"
        style="?android:attr/borderlessButtonStyle" />

</LinearLayout>
