<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical" >

    <!-- Address: xx:xx:xx:xx:xx:xx -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_device_address"
            android:textSize="18sp" />

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/deviceAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp" />
    </LinearLayout>

    <!-- State: Connected/Disconnected -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_state"
            android:textSize="18sp" />

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/connectionState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disconnected"
            android:textSize="18sp" />
    </LinearLayout>

    <!-- Separator line -->

    <View
        android:id="@+id/separator"
        android:layout_width="fill_parent"
        android:layout_height="0.2dp"
        android:background="@android:color/darker_gray"
        android:visibility="visible" />

    <!--Buttons!-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        <Button
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_lock"
            android:text="@string/lockButtonUnlocked"
            android:onClick="sendLockMessage"/>

        <Button
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_unlock"
            android:text="@string/lockButtonLocked"
            android:onClick="sendUnlockMessage" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        <Button
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_on"
            android:text="@string/lightsButtonOn"
            android:onClick="sendLightsOffMessage"/>

        <Button
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_off"
            android:text="@string/lightsButtonOff"
            android:onClick="sendLightsOnMessage" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/responseText"
        android:layout_gravity="center_horizontal" />

    <View
        android:id="@+id/separator2"
        android:layout_width="fill_parent"
        android:layout_height="0.2dp"
        android:background="@android:color/darker_gray"
        android:visibility="visible" />

</LinearLayout>
